# jhyphen

./: .classpath  .gitignore  .project  Main.java  Makefile  Makefile.am  README.md  build.xml  configure.ac  jhyphen.c  jhyphen.i  jhyphen.java  jhyphenJNI.java  jhyphen_wrap.c  pom.xml  swig.sh
java/: Makefile.am
java/ch/: Makefile.am
java/ch/sbs/: Makefile.am
java/ch/sbs/jhyphen/: Hyphenator.java  Makefile.am  dictionaries.properties
java/ch/sbs/jhyphen/swig/: .gitignore
src/ch/sbs/jhyphen/: HyphenDict.java  HyphenLibrary.java  HyphenState.java  HyphenTrans.java  Hyphenator.java
src/main/java/ch/sbs/jhyphen/: Hyphen.java  Hyphenator.java
src/main/resources/ch/sbs/jhyphen/: dictionaries.properties
src/test/java/ch/sbs/jhyphen/: HyphenatorTest.java  JHyphenTest.java
src/test/resources/tables/: non-standard.dic
test/ch/sbs/jhyphen/: JHyphenTest.java  Main.java
